--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2.5|^8.0",
+        "php": "^8.1.5",
         "barryvdh/laravel-debugbar": "^3.6",
         "doctrine/dbal": "^3.3",
         "fideloper/proxy": "^4.4",
