--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,10 @@
         "barryvdh/laravel-debugbar": "^3.6",
         "doctrine/dbal": "^3.3",
         "fideloper/proxy": "^4.4",
+        "google/apiclient": "^2.0",
         "laravel/framework": "^6.20.26",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "spatie/laravel-google-calendar": "^3.5"
     },
     "require-dev": {
         "facade/ignition": "^1.16.15",
